# chiffrage

./: .cirrus.yml  .gitignore  LICENSE  README.md  SECURITY.md  package.json  svelte.config.js  test.json  version  version.v
.github/workflows/: auto-tag.yml  autorelease.yml  build-on-tag.yml  build.yml  release.yml  sign-releases.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crypt/: commands.rs  mod.rs
src-tauri/src/crypto/: commands.rs  hybrid.rs  mod.rs
src-tauri/src/store/: commands.rs  mod.rs
src/components/: AppSidebar.svelte  Authenticate.svelte  ChooseFileButton.svelte  Confirm.svelte  HelpDialog.svelte  IntegrityCheckFail.svelte  KeyGenDialog.svelte  KeyImportDialog.svelte  KeyViewDialog.svelte  PasswordBox.svelte  SlideAlert.svelte  VaultAuthStatus.svelte
src/lib/: bindings.ts  main.ts
src/lib/components/ui/accordion/: accordion-trigger.svelte
src/lib/components/ui/scroll-table/: index.ts  table-head.svelte  table.svelte
src/lib/components/ui/sidebar/: sidebar.svelte
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/authenticate/: +page.svelte
src/routes/consume-age/: +page.svelte
src/routes/create-vault/: +page.svelte
src/routes/decrypt/: +page.svelte
src/routes/encrypt/: +page.svelte
src/routes/home/: +page.svelte
src/routes/keys/: +page.svelte
src/routes/keys/[slug]/: +page.svelte
src/routes/keys/[slug]/export/: +page.svelte
src/routes/new-key/: +page.svelte
src/routes/notepad/: +page.svelte
src/routes/notepad/encrypt-text/: +page.svelte
src/routes/onboarding/: +page.svelte
src/routes/produce-age/: +page.svelte
src/routes/unlock/: +page.svelte
