[package]
name = "chiffrage"
version = "0.1.0"
description = "A Tauri App"
authors = ["thrzl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chiffrage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34.7"
age = "0.11.1"
dirs = "6.0.0"
tauri-plugin-stronghold = "2"
secrecy = "0.10.3"
chacha20poly1305 = "0.10.1"
serde_cbor = "0.11.2"
argon2 = "0.5.3"
