[package]
name = "chiffrage"
version = "0.1.0"
description = "A Tauri App"
authors = ["thrzl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chiffrage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
age = { version = "0.11.1", features = ["armor", "async"] }
secrecy = "0.10.3"
chacha20poly1305 = "0.10.1"
serde_cbor = "0.11.2"
argon2 = "0.5.3"
tauri-plugin-dialog = "2"
tokio = { version = "1.48.0", features = ["time"] }
futures-io = "0.3.31"
tokio-util = { version = "0.7.17", features = ["compat"] }
futures-util = "0.3.31"
cuid2 = "0.1.4"
bech32 = "0.11.1"
tauri-specta = {version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
region = "3.0.2"
libcrux-ml-kem = "0.0.4"
x25519-dalek = "2.0.1"
age-core = "0.11.0"
subtle = "2.6.1"
base64 = "0.22.1"
sha2 = "0.10.9"
hkdf = "0.12.4"
sha3 = "0.10.8"
hpke-rs = { version = "0.5.0", features = ["libcrux"] }
hpke-rs-libcrux = "0.5.0"
hmac = "0.12.1"
parking_lot = "0.12.5"
rand = "0.9.2"
age-xwing = { git = "https://github.com/thrzl/age-xwing", version = "0.1.0" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
